--- a/alkonackanV1/res/layout/options.xml
+++ b/alkonackanV1/res/layout/options.xml
@@ -9,6 +9,15 @@
         <RadioButton android:id="@+id/radioMan" android:layout_height="wrap_content" android:layout_width="wrap_content" android:checked="true" android:text="Man" android:textColor="#333333" android:layout_marginRight="5sp"></RadioButton>
         <RadioButton android:id="@+id/radioKvinna" android:layout_height="wrap_content" android:layout_width="wrap_content" android:text="Kvinna" android:textColor="#333333" android:layout_marginLeft="5sp"></RadioButton>
     </RadioGroup>
-    <Spinner android:layout_width="fill_parent" android:id="@+id/spinner1" android:layout_height="wrap_content" android:layout_marginLeft="50sp" android:layout_marginRight="50sp"
-    android:prompt="@string/vikt_prompt" android:drawSelectorOnTop="true" android:fadeScrollbars="true">></Spinner>
+    
+    <Spinner android:layout_width="fill_parent"
+	android:layout_height="wrap_content" android:layout_marginLeft="50sp"
+	android:layout_marginRight="50sp" android:prompt="@string/vikt_prompt"
+	android:drawSelectorOnTop="true" android:fadeScrollbars="true"
+	android:layout_marginBottom="60sp" android:contentDescription="Vikt"
+	android:id="@+id/spinner_vikt">>
+	</Spinner>
+	
+	
+    <Button android:id="@+id/button1" android:layout_width="wrap_content" android:text="Kom igång!" android:layout_height="40sp" android:layout_gravity="bottom|center_horizontal"></Button>
 </LinearLayout>
