--- a/alkonackanV1/res/layout/session.xml
+++ b/alkonackanV1/res/layout/session.xml
@@ -1,10 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    >
-    <TextView android:id="@+id/textViewSessionOverview" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Sessionsöverblick"></TextView>
-    <Button android:text="+Drink" android:id="@+id/buttonAddDrink" android:layout_width="wrap_content" android:layout_height="wrap_content"></Button>
-   
+	android:layout_width="fill_parent" android:layout_height="fill_parent"
+	android:paddingLeft="20dip" android:paddingRight="20dip"
+	android:paddingTop="20dip" android:orientation="vertical"
+	android:background="#FFFFFF">
+	
+	<Spinner android:layout_width="fill_parent"
+	android:layout_height="wrap_content" 
+	 android:prompt="@string/kanslor_prompt"
+	android:drawSelectorOnTop="true" android:fadeScrollbars="true"
+	 android:contentDescription="Kanslor"
+	android:id="@+id/spinner_kanslor">>
+		</Spinner>
+		
+		
+	<EditText android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/editText1" android:hint="Vart är du?"></EditText>
+	<EditText android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/editText2" android:hint="Med vem?"></EditText>
+
+
+
+	<SlidingDrawer
+	android:id="@+id/drawer"
+	android:layout_width="wrap_content"
+	android:layout_height="wrap_content"
+	android:handle="@+id/handle"
+	android:content="@+id/content"
+	android:orientation="horizontal">
+	
+	<LinearLayout
+	android:id="@id/handle"
+	android:layout_width="fill_parent"
+	android:orientation="horizontal"
+	android:layout_height="fill_parent">
+	
+	<!--
+	<ImageView android:id="@+id/IconSlide"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:layout_centerVertical="true"
+	android:layout_centerHorizontal="true"
+	android:src="@drawable/left_48">
+	</ImageView> -->
+	</LinearLayout>
+	
+	<LinearLayout
+	android:id="@id/content"
+	android:layout_width="fill_parent"
+	android:orientation="horizontal"
+	android:layout_height="fill_parent">
+	
+		<EditText android:layout_width="fill_parent"
+		android:layout_height="wrap_content" android:id="@+id/editText12" android:hint="Vart är du?"></EditText>
+	
+	</LinearLayout>
+	
+	</SlidingDrawer>
+
 </LinearLayout>
