--- a/alkonackanV1/res/layout/sessionlist.xml
+++ b/alkonackanV1/res/layout/sessionlist.xml
@@ -4,6 +4,15 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     >
-    <Button android:id="@+id/buttonNewSession" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="Ny session"></Button>
-    <ListView android:id="@+id/listViewSessions" android:layout_height="wrap_content" android:layout_width="fill_parent"></ListView>
+    <Button 
+    	android:id="@+id/buttonNewSession" 
+    	android:layout_width="wrap_content" 
+    	android:layout_height="wrap_content" 
+    	android:text="Ny session">
+    </Button>
+    <ListView 
+    	android:id="@+id/listViewSessions" 
+    	android:layout_height="wrap_content" 
+    	android:layout_width="fill_parent">
+    </ListView>
 </LinearLayout>
