--- a/alkonackanV1/res/layout/session.xml
+++ b/alkonackanV1/res/layout/session.xml
@@ -4,9 +4,18 @@
 	android:layout_height="fill_parent"
 	android:paddingLeft="20dip" 
 	android:paddingRight="20dip"
-	android:paddingTop="20dip" 
-	android:orientation="vertical"
-	android:background="#FFFFFF">
+	android:paddingTop="30dip" 
+	android:background="#FFFFFF" android:orientation="vertical">
+	<TextView
+    	android:id="@+id/Session"
+    	android:text="Session"
+    	android:layout_gravity="center_horizontal" 
+    	android:layout_marginBottom="10sp" 
+    	android:layout_width="wrap_content"
+    	android:layout_height="wrap_content"
+    	android:textSize="24sp" 
+    	android:textColor="#333333">
+    	</TextView>
 	<Spinner 
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" 
@@ -14,55 +23,88 @@
 		android:drawSelectorOnTop="true" 
 		android:fadeScrollbars="true"
 	 	android:contentDescription="Kanslor"
-		android:id="@+id/spinner_kanslor">>
+		android:id="@+id/spinner_kanslor"
+		android:layout_marginBottom="10sp">
 	</Spinner>	
 	<EditText 
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" 
 		android:id="@+id/editText1" 
-		android:hint="Vart är du?">
+		android:hint="Vart är du?"
+		android:textSize="18sp"
+		android:layout_marginBottom="10sp">
 	</EditText>
 	<EditText 
 		android:layout_width="fill_parent"
 		android:layout_height="wrap_content" 
 		android:id="@+id/editText2" 
-		android:hint="Med vem?">
+		android:hint="Med vem?"
+		android:textSize="18sp"
+		android:layout_marginBottom="10sp">
 	</EditText>
-	<SlidingDrawer
-		android:id="@+id/drawer"
-		android:layout_width="wrap_content"
-		android:layout_height="wrap_content"
-		android:handle="@+id/handle"
-		android:content="@+id/content"
-		android:orientation="horizontal">
-	
-	<LinearLayout
-		android:id="@id/handle"
-		android:layout_width="fill_parent"
-		android:orientation="horizontal"
-		android:layout_height="fill_parent">
-	
-		<!--
-		<ImageView android:id="@+id/IconSlide"
-		android:layout_width="fill_parent"
-		android:layout_height="fill_parent"
-		android:layout_centerVertical="true"
-		android:layout_centerHorizontal="true"
-		android:src="@drawable/left_48">
-		</ImageView> -->
-	</LinearLayout>
-	
-	<LinearLayout
-		android:id="@id/content"
-		android:layout_width="fill_parent"
-		android:orientation="horizontal"
-		android:layout_height="fill_parent">
-		<EditText 
-			android:layout_width="fill_parent"
-			android:layout_height="wrap_content" 
-			android:id="@+id/editText12" 
-			android:hint="Vart är du?">
-		</EditText>	
-	</LinearLayout>	
-	</SlidingDrawer>
+	<TableLayout 
+		android:layout_height="wrap_content" 
+		android:layout_width="fill_parent" 
+		android:id="@+id/tableLayout1">
+		<TableRow 
+			android:id="@+id/tableRow1" 
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content"
+			android:layout_marginBottom="10sp">
+			<ImageButton 
+				android:src="@drawable/icon_oel" 
+				android:id="@+id/imageButton1" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content">
+			</ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_drink" 
+				android:id="@+id/imageButton2" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content" 
+				android:layout_marginLeft="30sp">
+			</ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_folk" 
+				android:id="@+id/imageButton3" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content"
+				android:layout_marginLeft="30sp">
+			</ImageButton>
+		</TableRow>
+		<TableRow 
+			android:id="@+id/tableRow2" 
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content">
+			<ImageButton 
+				android:src="@drawable/icon_vin" 
+				android:id="@+id/imageButton4" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content">
+			</ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_stark" 
+				android:id="@+id/imageButton5" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content"
+				android:layout_marginLeft="30sp">
+			</ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_shot" 
+				android:id="@+id/imageButton6" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content"
+				android:layout_marginLeft="30sp">
+			</ImageButton>
+		</TableRow>
+	</TableLayout>
 </LinearLayout>
+
+
+
+
+
+
+
+
+	
