Signed-off-by: Welde <Welde@10.1.1.60>

--- a/alkonackanV1/res/layout/sessionlist.xml
+++ b/alkonackanV1/res/layout/sessionlist.xml
@@ -1,29 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical"
-    android:layout_width="fill_parent"
-    android:layout_height="fill_parent"
-    android:background="#FFFFFF">
-    <TextView 
-    	android:layout_height="wrap_content" 
-    	android:layout_width="wrap_content" 
-    	android:id="@+id/sessionlisttext" 
-    	android:text="Sessionlist" 
-    	android:textColor="#333333" 
-    	android:layout_gravity="center_horizontal" 
-    	android:textSize="24sp" 
-    	android:layout_marginTop="30sp"
-    	android:layout_marginBottom="5sp">
-    </TextView>
-    <Button 
-    	android:id="@+id/buttonNewSession" 
-    	android:layout_width="wrap_content" 
-    	android:text="Ny Session" 
-    	android:textSize="18sp" android:layout_height="wrap_content" android:layout_gravity="center">
-    </Button>
-    <ListView 
-    	android:id="@+id/listViewSessions" 
-    	android:layout_height="wrap_content" 
-    	android:layout_width="fill_parent">
-    </ListView>
+<LinearLayout 
+	android:orientation="vertical"
+	android:layout_width="fill_parent"
+	android:layout_height="fill_parent"
+	android:background="#FFFFFF" 
+	xmlns:android="http://schemas.android.com/apk/res/android" 
+	android:padding="20dip">
+	<TableLayout 
+		android:id="@+id/tableLayout1" 
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:layout_marginBottom="10dip">
+		<TableRow 
+			android:id="@+id/tableRow1" 
+			android:layout_width="wrap_content" 
+			android:layout_height="wrap_content">
+			<Button 
+				android:text="Tillbaka" 
+				android:layout_width="wrap_content" 
+				android:layout_gravity="top|left" 
+				android:id="@+id/button1" 
+				android:layout_height="wrap_content">
+			</Button>
+			<Button 
+				android:text="Ny session" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content" 
+				android:layout_gravity="top|right" 
+				android:id="@+id/buttonNewSession" 
+				android:layout_marginLeft="60dip">
+			</Button>
+		</TableRow>
+	</TableLayout>
+	<ListView 
+		android:textColor="#ffffff"
+		android:id="@+id/listViewSessions" 
+		android:layout_width="fill_parent" 
+		android:entries="@array/sessionItems" 
+		android:layout_height="fill_parent" 
+		android:fadingEdge="none">
+	</ListView>
 </LinearLayout>
