--- a/alkonackanV1/res/layout/sessionlist.xml
+++ b/alkonackanV1/res/layout/sessionlist.xml
@@ -20,7 +20,8 @@
 				android:layout_width="wrap_content" 
 				android:layout_gravity="top|left" 
 				android:id="@+id/button1" 
-				android:layout_height="wrap_content">
+				android:layout_height="wrap_content"
+				android:textSize="18sp">
 			</Button>
 			<Button 
 				android:text="Ny session" 
@@ -28,7 +29,8 @@
 				android:layout_width="wrap_content" 
 				android:layout_gravity="top|right" 
 				android:id="@+id/buttonNewSession" 
-				android:layout_marginLeft="60dip">
+				android:layout_marginLeft="40dip"
+				android:textSize="18sp">
 			</Button>
 		</TableRow>
 	</TableLayout>
