--- a/alkonackanV1/res/layout/main.xml
+++ b/alkonackanV1/res/layout/main.xml
@@ -11,8 +11,7 @@
     	android:layout_width="50dip" 
     	android:layout_height="50dip" 
     	android:src="@drawable/icon_info" 
-    	android:id="@+id/imageButton1" 
-    	android:layout_gravity="right">
+    	android:layout_gravity="right" android:id="@+id/buttonInfo">
     </ImageButton>
     <TextView 
     	android:layout_width="wrap_content" 
