--- a/alkonackanV1/res/layout/session.xml
+++ b/alkonackanV1/res/layout/session.xml
@@ -1,54 +1,97 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
+<RelativeLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
 	android:paddingLeft="20dip" android:paddingRight="20dip"
-	android:paddingTop="20dip" android:orientation="vertical"
+	android:paddingTop="20dip" android:paddingBottom="0sp" android:orientation="vertical"
 	android:background="#FFFFFF" xmlns:android="http://schemas.android.com/apk/res/android">
 	<Spinner android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:prompt="@string/kanslor_prompt"
 		android:drawSelectorOnTop="true" android:fadeScrollbars="true"
-		android:contentDescription="Kanslor" android:id="@+id/spinner_kanslor">>
+		android:contentDescription="Kanslor" android:id="@+id/spinner_kanslor"
+		android:layout_marginTop="20sp">
 </Spinner>
 	<EditText android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:id="@+id/editText1"
-		android:hint="Vart är du?">
+		android:hint="Vart är du?" android:layout_marginTop="75sp">
 	</EditText>
 	<EditText android:layout_width="fill_parent"
 		android:layout_height="wrap_content" android:id="@+id/editText2"
-		android:hint="Med vem?">
+		android:hint="Med vem?" android:layout_marginTop="130sp">
 	</EditText>
 
-	<TableLayout android:id="@+id/tableLayout1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10sp">
-		<TableRow android:id="@+id/tableRow1" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="10sp">
-			<ImageButton android:src="@drawable/icon_stark" android:id="@+id/button_stark" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0sp"></ImageButton>
-			<ImageButton android:src="@drawable/icon_folk" android:id="@+id/button_folk" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp"></ImageButton>
-			<ImageButton android:src="@drawable/icon_vin" android:id="@+id/button_vin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp"></ImageButton>
+	<TableLayout 
+		android:id="@+id/tableLayout1" 
+		android:layout_width="fill_parent" 
+		android:layout_height="wrap_content" 
+		android:layout_marginTop="190sp">
+		<TableRow 
+			android:id="@+id/tableRow1" 
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content" 
+			android:layout_marginBottom="10sp">
+			<ImageButton 
+				android:src="@drawable/icon_stark" 
+				android:id="@+id/button_stark" 
+				android:layout_width="wrap_content" 
+				android:layout_height="wrap_content" 
+				android:layout_marginLeft="0sp"></ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_folk" 
+				android:id="@+id/button_folk" 
+				android:layout_width="wrap_content" 
+				android:layout_height="wrap_content" 
+				android:layout_marginLeft="30sp"></ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_vin" 
+				android:id="@+id/button_vin" 
+				android:layout_width="wrap_content" 
+				android:layout_height="wrap_content" 
+				android:layout_marginLeft="30sp"></ImageButton>
 		</TableRow>
-		<TableRow android:id="@+id/tableRow2" android:layout_width="fill_parent" android:layout_height="wrap_content">
-			<ImageButton android:src="@drawable/icon_drink" android:id="@+id/button_drink" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="0sp"></ImageButton>
-			<ImageButton android:src="@drawable/icon_oel" android:id="@+id/button_oel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp"></ImageButton>
+		<TableRow 
+			android:id="@+id/tableRow2" 
+			android:layout_width="fill_parent" 
+			android:layout_height="wrap_content">
+			<ImageButton 
+				android:src="@drawable/icon_drink" 
+				android:id="@+id/button_drink" 
+				android:layout_width="wrap_content" 
+				android:layout_height="wrap_content" 
+				android:layout_marginLeft="0sp"></ImageButton>
+			<ImageButton 
+				android:src="@drawable/icon_oel" android:id="@+id/button_oel" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp"></ImageButton>
 			<ImageButton android:src="@drawable/icon_shot" android:id="@+id/button_shot" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="30sp"></ImageButton>
 		</TableRow>
 	</TableLayout>
 
-
- 	<SlidingDrawer android:id="@+id/slidingDrawerOffDrawer"
-		android:layout_width="fill_parent" android:layout_height="fill_parent"
-		android:handle="@+id/handle" android:content="@+id/content">
+ 	<SlidingDrawer 
+ 		android:id="@+id/slidingDrawerOffDrawer"
+		android:layout_width="fill_parent" 
+		android:layout_height="fill_parent"
+		android:handle="@+id/handle" 
+		android:content="@+id/content">
 		
-		<Button android:text="Handle" android:layout_height="wrap_content"
-			android:layout_width="wrap_content" android:id="@+id/handle">
-		</Button>
+		<ImageView
+			android:id="@id/handle"
+			android:src="@drawable/avslutaknapp" 
+			android:layout_width="99dip"
+         	android:layout_height="23dip"/>
+         	
 		<LinearLayout android:id="@+id/content"
-			android:layout_width="fill_parent" android:layout_height="fill_parent">
+			android:layout_width="fill_parent" 
+			android:layout_height="fill_parent"
+			android:gravity="center_horizontal"
+			android:background="#fff"
+			android:padding="20dip">
+			
+			<Button 
+				android:text="Avsluta session" 
+				android:layout_height="wrap_content" 
+				android:layout_width="wrap_content" 
+				android:id="@+id/buttonAvslutaSession" 
+				android:textSize="18sp">
+			</Button>
+			
 		</LinearLayout>
-		<EditText android:layout_width="fill_parent"
-			android:layout_height="wrap_content" android:id="@+id/editText1"
-			android:hint="Vart är du?">
-		</EditText>
-		<TextView android:text="Shutdown" android:textColor="#000000"
-			android:id="@+id/textViewTestText" android:layout_width="wrap_content"
-			android:layout_height="wrap_content">
-		</TextView>
 	</SlidingDrawer>
  
 
@@ -73,4 +116,4 @@
  </SlidingDrawer> -->
 
 
-</LinearLayout>
+</RelativeLayout>
